infra/k8s/istio/manifests/service.yaml
# Gateway service override (See charts.yaml/istio/gateway)
# This is done because Typhoon routes ClusterIP traffic into the cluster by default.
# ref: https://typhoon.psdn.io/addons/ingress/#bare-metal
apiVersion: v1
kind: Service
metadata:
  name: istio-gateway
  namespace: istio-ingress
spec:
  type: ClusterIP
  clusterIP: 10.3.0.2
  selector:
    istio: gateway
  ports:
  - port: 80
    name: http
  - port: 443
    name: https
