infra/k8s/istio/manifests/netpol-gateway.yaml
# This doesn't seem sufficient?
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-istio-gateway
  namespace: istio-ingress
spec:
  ingress:
  - from:
    # LAN
    - ipBlock:
        cidr: 10.0.0.0/8
    # VPN
    - ipBlock:
        cidr: 192.168.2.0/24
    # Loopback
    - ipBlock:
        cidr: 127.0.0.0/16
    # https://www.cloudflare.com/ips-v4/#
    - ipBlock:
        cidr: 173.245.48.0/20
    - ipBlock:
        cidr: 103.21.244.0/22
    - ipBlock:
        cidr: 103.22.200.0/22
    - ipBlock:
        cidr: 103.31.4.0/22
    - ipBlock:
        cidr: 141.101.64.0/18
    - ipBlock:
        cidr: 108.162.192.0/18
    - ipBlock:
        cidr: 190.93.240.0/20
    - ipBlock:
        cidr: 188.114.96.0/20
    - ipBlock:
        cidr: 197.234.240.0/22
    - ipBlock:
        cidr: 198.41.128.0/17
    - ipBlock:
        cidr: 162.158.0.0/15
    - ipBlock:
        cidr: 104.16.0.0/13
    - ipBlock:
        cidr: 104.24.0.0/14
    - ipBlock:
        cidr: 172.64.0.0/13
    - ipBlock:
        cidr: 131.0.72.0/22
    # segv-www
    - ipBlock:
        cidr: 172.177.238.119/32
    ports:
      - port: 80
        protocol: TCP
      - port: 443
        protocol: TCP
      - port: 445
        protocol: TCP
  podSelector:
    matchLabels:
      istio: gateway
  policyTypes:
  - Ingress
